[package]
name = "minechat-client"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/walker84837/minechat-client"
authors = ["walker84837"]

[profile.dev]
debug = false

[profile.release]
strip = true
lto = true
overflow-checks = true
panic = "abort"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
directories = "6.0.0"
env_logger = "0.11.5"
log = "0.4.22"
miette = "7.5.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["tokio-rustls"] }
url = "2.5.4"
uuid = { version = "1.15.1", features = ["v4"] }
minechat-protocol = { git = "https://github.com/walker84837/minechat-protocol.git" }
