[package]
name = "minechat-client"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/walker84837/minechat-client"
description = "The client implementation of MineChat, letting you chat with people over on Minecraft"
authors = ["walker84837"]
readme = "README.md"
rust-version = "1.85.0"
keywords = ["chat-client", "cli", "networking", "async", "tcp"]
categories = ["command-line-utilities", "network-programming", "authentication", "config"]

[profile.dev]
debug = false

[profile.release]
strip = true
lto = true
overflow-checks = true
panic = "abort"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
directories = "6.0.0"
env_logger = "0.11.5"
log = "0.4.22"
miette = { version = "7.5.0", features = ["fancy"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.41.1", features = ["full"] }
minechat-protocol = "0.3.0"
